# Tap3stry

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  FILES  README.md  env.sh  go.sh  index.html  server.py
src/: main.cpp  main.py
src/detail/: colormaps.h  opacitymaps.h
src/engine/: main.cpp
src/engine/detail/: colormaps.h  opacitymaps.h  volumes.h
src/server/: main.py
src/server/static/: index.html
tools/: minmax.py  netcdf2raw.py
